[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "victoryquant"
version = "1.0.0"
description = "A股量化交易系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8, <3.12"
authors = [
    {name = "VictoryQuant Team", email = "victoryquant@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["quantitative", "trading", "stock", "A股", "量化交易"]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "akshare>=1.10.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "requests>=2.28.0",
    "pymysql>=1.0.0",
    "DBUtils>=3.0.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/victoryquant/victoryquant"
Documentation = "https://github.com/victoryquant/victoryquant#readme"
Repository = "https://github.com/victoryquant/victoryquant.git"
Issues = "https://github.com/victoryquant/victoryquant/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["victoryquant*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
